tab spacing fix

--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -2,6 +2,7 @@
   background: transparent;
   border-bottom: 1px solid $silver-40;
   padding: 0;
+  margin-bottom: 50px;
 
   li {
     color: $silver;
